prueba de permisos

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </header>
     <main>
       <section>
-        <h2>Bienvenido a la Plataforma de Retos</h2>
-        <p>Esta es una plataforma donde podrás encontrar retos proporcionados por empresas del Oriente Antioqueño. Completa los retos y recibe una certificación de experiencia.</p>
+        <h2>Bienvenido a la Plataforma de Retos.</h2>
+        <p>Esta es una plataforma donde podrás encontrar retos proporcionados por empresas del Oriente Antioqueño. Completa los retos y recibe una certificación de experiencia. </p>
       </section>
       <section>
         <h2>Últimos Retos</h2>
